
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {void* traffic_class; } ;
struct TYPE_3__ {void* traffic_class; } ;
struct sockaddr_atmsvc {int sas_family; int aal; TYPE_2__ txtp; TYPE_1__ rxtp; } ;
struct sockaddr {int dummy; } ;
struct atm_qos {int sas_family; int aal; TYPE_2__ txtp; TYPE_1__ rxtp; } ;
typedef int dj ;
typedef int addr ;


 int AF_ATMSVC ;
 int ATM ;
 int ATM_NO_AAL ;
 void* ATM_UBR ;
 int NUM_CPUS ;
 int O_RDONLY ;
 int PF_ATMSVC ;
 int SOCK_DGRAM ;
 int SOL_ATM ;
 int SO_ATMQOS ;
 int bind (int,struct sockaddr*,int) ;
 int close (int) ;
 scalar_t__ fork () ;
 int listen (int,int) ;
 int memset (struct sockaddr_atmsvc*,int ,int) ;
 int open (int ,int ) ;
 int printf (char*) ;
 int read (int,char**,int) ;
 int setsockopt (int,int ,int ,struct sockaddr_atmsvc*,int) ;
 int socket (int ,int ,int ) ;

int
main(void)
{
    char *err, adurit[2000];
    int i, ret, sock, proc;
    struct atm_qos dj;
    struct sockaddr_atmsvc addr;



    sock = socket(PF_ATMSVC, SOCK_DGRAM, 0);


    memset(&dj, 0, sizeof(dj));
    dj.rxtp.traffic_class = ATM_UBR;
    dj.txtp.traffic_class = ATM_UBR;
    dj.aal = ATM_NO_AAL;


    ret = setsockopt(sock, SOL_ATM, SO_ATMQOS, &dj, sizeof(dj));
    if (ret == -1) {
        printf("failed !\n");
        return 1;
    }
    memset(&addr, 0, sizeof(addr));
    addr.sas_family = AF_ATMSVC;

    bind(sock, (struct sockaddr *) &addr, sizeof(addr));

    listen(sock, 10);
    listen(sock, 10);

    for (i = 1; i < NUM_CPUS; ++i) {
        if (fork() != 0) {
            break;
        }
    }
    proc = open(ATM, O_RDONLY);
    ret = read(proc, &adurit, 2000);
    close(proc);

    return 0;
}
